--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -11,6 +11,8 @@
       flex-direction: column;
       margin-top: 20px;
     }
+
+    
 }
 
 .input{
@@ -26,10 +28,11 @@
         margin-left: 190px;
         margin-top: 20px;
       }
-      // @media(max-width:1005px){
-      //   width: 170px;
-        
-      // }
+      @media(max-width:420px){
+        width: 20px;
+        margin-left: 0;
+        margin-top: 0;
+      }
    
 
     &:focus{
@@ -45,6 +48,7 @@
     position: absolute;
     left: 14px;
     top: 12px;
+
 }
 
 .clearIcon{
